[gd_scene load_steps=7 format=2]

[ext_resource path="res://Images/pieces.png" type="Texture" id=1]
[ext_resource path="res://PromotionDialog.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 180, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 60, 60 )

[node name="PromotionDialog" type="WindowDialog"]
margin_left = 148.0
margin_top = 103.0
margin_right = 338.0
margin_bottom = 223.0
popup_exclusive = true
window_title = "Choose piece..."
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
color = "white"

[node name="QueenPromotion" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -30.0
margin_right = 30.0
margin_bottom = 60.0
texture_normal = SubResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RookPromotion" type="TextureButton" parent="HBoxContainer"]
margin_right = 60.0
margin_bottom = 60.0
texture_normal = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KnightPromotion" type="TextureButton" parent="HBoxContainer"]
margin_left = 64.0
margin_right = 124.0
margin_bottom = 60.0
texture_normal = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BishopPromotion" type="TextureButton" parent="HBoxContainer"]
margin_left = 128.0
margin_right = 188.0
margin_bottom = 60.0
texture_normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="QueenPromotion" to="." method="_on_QueenPromotion_pressed"]
[connection signal="pressed" from="HBoxContainer/RookPromotion" to="." method="_on_RookPromotion_pressed"]
[connection signal="pressed" from="HBoxContainer/KnightPromotion" to="." method="_on_KnightPromotion_pressed"]
[connection signal="pressed" from="HBoxContainer/BishopPromotion" to="." method="_on_BishopPromotion_pressed"]
